@@ -1,3 +1,12 @@
+2006-12-21  Keishi Suenaga <skeishi@yahoo.co.jp>
+
+	C++ dependency is removed.
+	* configure.in: remove AC_PROG_CXX,
+	                always link winsock32 for midi_a.c
+	* windrv/timiditydrv.cpp: removed
+	* windrv/timiditydrv.c: added
+	* windrv/Makefile_am: remove C++ dependency
+
 2006-12-20  Keishi Suenaga <skeishi@yahoo.co.jp>
 
 	* timidity/midi_a.c: windows compilers support.
